swscale: treat gray as a fullrage (0-255) format

Fixes Ticket2684

Signed-off-by: Michael Niedermayer <michaelni@gmx.at>